--- a/src/index.css
+++ b/src/index.css
@@ -7,12 +7,12 @@
 }
 
 html {
-    margin: 0 50px;
+    margin: 0 10px;
 }
 
 body {
-    max-width: 800px;
     margin: auto;
+    background-color: black;
 }
 
 p {
@@ -32,19 +32,35 @@ hr {
 
 .font {
     font-family: 'Kosugi Maru', sans-serif;
-    font-size: 30px;
+    font-size: 24px;
+    color: white;
     padding: 5px 0;
+}
+
+.white {
+    color: white;
+}
+
+.float-left {
+    float: left;
 }
 
 .calculate-area, #number-area {
     width: 100%;
-    height: 310px;
+    height: 400px;
 }
 
 .calculate-area {
     text-align: center;
     display: table;
     background-color: black;
+    border: solid 1px white;
+}
+
+#answer-title {
+    position: absolute;
+    margin: 10px;
+    z-index: 10;
 }
 
 #number-area {
@@ -52,7 +68,6 @@ hr {
     vertical-align: middle;
     font-weight: bold;
     font-size: 90px;
-    color: limegreen;
     font-family: 'ABACUS2', sans-serif;
 }
 
@@ -66,6 +81,7 @@ hr {
 
 .input-area {
     margin-right: 24px;
+    margin-bottom: 6px;
 }
 
 .label-area {
@@ -74,7 +90,7 @@ hr {
 
 .input-box {
     padding: 10px 15px;
-    font-size: 30px;
+    font-size: 24px;
     width: 200px;
     border-radius: 3px;
     border: 2px solid #ddd;
@@ -106,7 +122,7 @@ hr {
 .btn-blue {
     font-family: 'Kosugi Maru', sans-serif;
     padding: 0.25em;
-    font-size: 30px;
+    font-size: 24px;
     background-image: linear-gradient(#6795fd 0%, #67ceff 100%);
     border-bottom: solid 3px #5e7fca;
 }
@@ -121,7 +137,7 @@ hr {
 .btn-orange {
     padding: 0.5em 1em;
     font-family: 'Squada One', cursive;
-    font-size: 42px;
+    font-size: 30px;
     background-image: linear-gradient(45deg, #FFC107 0%, #ff8b5f 100%);
     border-bottom: solid 3px #c58668;
     margin: 5px;
@@ -134,6 +150,11 @@ hr {
     border-bottom: solid 3px rgba(197, 134, 104, 0.2);
 }
 
-.index-config-basic, #answer-area, #number-history-area, #number-history-stringify {
+#answer-title, #result-section, #number-history-area {
+    display: none;
+}
+
+/* 今は常時非表示になっている部分 */
+.index-config-basic, #answer-area, #number-history-stringify {
     display: none;
 }
