--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,7 @@ html {
 }
 
 body {
+    max-width: 1500px;
     margin: auto;
     background-color: black;
 }
@@ -45,7 +46,9 @@ hr {
     float: left;
 }
 
-.calculate-area, #number-area {
+/* 出題部分 */
+
+.calculate-area, .number-area {
     width: 100%;
     height: 400px;
 }
@@ -63,7 +66,7 @@ hr {
     z-index: 10;
 }
 
-#number-area {
+.number-area {
     display: table-cell;
     vertical-align: middle;
     font-weight: bold;
@@ -71,16 +74,18 @@ hr {
     font-family: 'ABACUS2', sans-serif;
 }
 
-#button-area {
-    /*text-align: center;*/
-}
+/* 操作部分 */
 
-#config-basic, #config-advanced {
+.operation-panel {
     margin: 0 10px;
 }
 
+.button {
+    margin-right: 10px;
+}
+
 .input-area {
-    margin-right: 24px;
+    margin-right: 10px;
     margin-bottom: 6px;
 }
 
@@ -91,7 +96,7 @@ hr {
 .input-box {
     padding: 10px 15px;
     font-size: 24px;
-    width: 200px;
+    width: 120px;
     border-radius: 3px;
     border: 2px solid #ddd;
     box-sizing: border-box;
@@ -102,6 +107,10 @@ hr {
     border: 2px solid #ff9900;
     z-index: 10;
     outline: 0;
+}
+
+.input-box:disabled {
+    background-color: darkgray;
 }
 
 .btn-gradient-3d {
@@ -127,6 +136,14 @@ hr {
     border-bottom: solid 3px #5e7fca;
 }
 
+.btn-blue-active {
+    font-family: 'Kosugi Maru', sans-serif;
+    padding: 0.25em;
+    font-size: 24px;
+    background-image: linear-gradient(#9567fd 0%, #ce67ff 100%);
+    border-bottom: solid 3px #ca5ea8;
+}
+
 .btn-blue:disabled {
     /* 20 % of the enable */
     background-image: linear-gradient(rgba(103, 149, 253, 0.2) 0%, rgba(103, 206, 255, 0.2) 100%);
@@ -140,7 +157,6 @@ hr {
     font-size: 30px;
     background-image: linear-gradient(45deg, #FFC107 0%, #ff8b5f 100%);
     border-bottom: solid 3px #c58668;
-    margin: 5px;
 }
 
 .btn-orange:disabled {
@@ -150,11 +166,6 @@ hr {
     border-bottom: solid 3px rgba(197, 134, 104, 0.2);
 }
 
-#answer-title, #result-section, #number-history-area {
-    display: none;
-}
-
-/* 今は常時非表示になっている部分 */
-.index-config-basic, #answer-area, #number-history-stringify {
+.display-none {
     display: none;
 }
