--- a/src/index.css
+++ b/src/index.css
@@ -102,6 +102,7 @@ hr {
     vertical-align: middle;
     font-weight: bold;
     font-family: 'ABACUS2', sans-serif;
+    color: limegreen;
 }
 
 /* 操作部分 */
