フルスクリーンモード時の出題情報フォーマットを修正。

--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -333,10 +333,11 @@ input[type="number"] {
 }
 
 #question-info-label {
-    color: #67ceff;
     position: absolute;
     right: 0;
     bottom: 0;
+    text-align: right;
+    color: limegreen;
 }
 
 @keyframes show {
