--- a/src/assets/bootstrap@5.0.0-beta1.css
+++ b/src/assets/bootstrap@5.0.0-beta1.css
@@ -207,11 +207,11 @@ sup {
 }
 
 a {
-  color: #0d6efd;
+  color: limegreen;
   text-decoration: underline;
 }
 a:hover {
-  color: #0a58ca;
+  color: forestgreen;
 }
 
 a:not([href]):not([class]), a:not([href]):not([class]):hover {
@@ -3839,7 +3839,7 @@ textarea.form-control-lg {
 .nav-pills .nav-link.active,
 .nav-pills .show > .nav-link {
   color: #fff;
-  background-color: #0d6efd;
+  background-color: forestgreen;
 }
 
 .nav-fill > .nav-link,
