--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -21,7 +21,7 @@ p {
 }
 
 hr {
-    border-top: 1px solid #8c8b8b;
+    border-top: 1px solid white;
     margin: 5px 0;
 }
 
@@ -121,9 +121,12 @@ hr {
 .number-area {
     display: table-cell;
     vertical-align: middle;
-    font-weight: bold;
-    font-family: 'ABACUS2', sans-serif;
     color: limegreen;
+}
+
+.abacus-font {
+    font-family: 'ABACUS2', sans-serif;
+    font-weight: bold;
 }
 
 /* 操作部分 */
