--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -2,7 +2,10 @@
 @import "https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css";
 @import "simple-keyboard/build/css/index.css";
 
-@import url('https://fonts.googleapis.com/css2?family=Balsamiq+Sans:wght@700&family=Kosugi+Maru&family=Open+Sans&family=Squada+One&display=swap');
+@font-face {
+  font-family: 'Kosugi Maru';
+  src: url("../fonts/KosugiMaru-Regular.ttf")
+}
 
 @font-face {
   font-family: "ABACUS2";
