--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,5 +1,5 @@
 @import "bootstrap/dist/css/bootstrap.min.css";
-@import "https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css";
+@import "bootstrap-icons/font/bootstrap-icons.css";
 @import "simple-keyboard/build/css/index.css";
 
 @font-face {
