update: タッチデバイスの回答入力キーボードのキーフォントを変更

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -169,6 +169,10 @@ hr {
   font-family: 'ABACUS2', sans-serif;
 }
 
+.input-answer-keyboard-touch {
+  font-family: 'Kosugi Maru', sans-serif;
+}
+
 input[type="number"]::-webkit-outer-spin-button, input[type="number"]::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
