fix: 答え表示時、回線状況によってフォントがちらつくため、フォントをプリロードする

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -4,12 +4,12 @@
 
 @font-face {
   font-family: 'Kosugi Maru';
-  src: url("../fonts/KosugiMaru-Regular.ttf")
+  src: url("fonts/KosugiMaru-Regular.ttf")
 }
 
 @font-face {
   font-family: "ABACUS2";
-  src: url("../fonts/ABACUS2.woff");
+  src: url("fonts/ABACUS2.woff");
 }
 
 html {
