fix: スマホ版回答欄にフォーカスできないようにする

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -65,6 +65,7 @@ hr {
 
   #input-answer-box-touch-display {
     font-size: 45px;
+    min-height: 2em;
   }
 }
 
@@ -75,6 +76,7 @@ hr {
 
   #input-answer-box-touch-display {
     font-size: 30px;
+    min-height: 2em;
   }
 }
 
