update: 桁数・口数選択の input の矢印を削除してスペースを詰める

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,4 +1,6 @@
-@import "bootstrap/dist/css/bootstrap.min.css";
+// customize bootstrap
+@import "custom";
+
 @import "bootstrap-icons/font/bootstrap-icons.css";
 @import "simple-keyboard/build/css/index.css";
 
