update: 難易度サポート外の選択肢の背景色を変更して目立たせる

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -209,3 +209,7 @@ input[type="number"] {
 .operation-panel {
   height: calc(100vh - map-get($spacers, 2) * 2 - 1px);
 }
+
+.difficulty-not-supported {
+  background-color: $pink-100;
+}
